--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -28,10 +28,12 @@
   - [6.1. 整体流程](#61-整体流程)
   - [6.2. 入口函数: kvm_set_irq()](#62-入口函数-kvm_set_irq)
   - [6.3. PIC中断触发: kvm_set_pic_irq](#63-pic中断触发-kvm_set_pic_irq)
+    - [整体流程](#整体流程)
   - [6.4. IOAPIC中断触发: kvm_set_ioapic_irq](#64-ioapic中断触发-kvm_set_ioapic_irq)
     - [6.4.1. 整体流程](#641-整体流程)
-  - [6.5. LAPIC接收中断](#65-lapic接收中断)
-  - [6.6. MSI中断触发函数: kvm_set_msi](#66-msi中断触发函数-kvm_set_msi)
+  - [6.5. MSI中断触发函数: kvm_set_msi](#65-msi中断触发函数-kvm_set_msi)
+    - [6.5.1. 整体流程](#651-整体流程)
+  - [6.6. LAPIC接收中断](#66-lapic接收中断)
   - [6.7. 具体注入过程](#67-具体注入过程)
 - [7. 中断注入的触发](#7-中断注入的触发)
 - [8. 参考](#8-参考)
@@ -747,11 +749,6 @@ int kvm_set_routing_entry(struct kvm *kvm,
 ## 6.1. 整体流程
 
 ```cpp
-vcpu_enter_guest() // 物理CPU进入guest模式
- ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
- |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi
- ├─ kvm_x86_ops.run(vcpu) // 真正进入虚拟机模式
-
 kvm_set_irq()  // 中断注入入口
  ├─ kvm_irq_map_gsi()  // 获取同一个irq注册的所有中断路由项
  ├─ while() {  // 遍历中断路由项
@@ -942,19 +939,24 @@ int kvm_irq_map_gsi(struct kvm *kvm,
 ```
 
 然后对于数组中的**每个元素**，调用**其set方法**
-- 目前大都是**APIC架构**，因此set方法基本都是`kvm_set_ioapic_irq`
 - 在**传统pic**情况下，是`kvm_set_pic_irq`
+- 目前大都是**APIC架构**，因此set方法基本都是`kvm_set_ioapic_irq`
 - **MSI中断**消息系统的中断触发函数`kvm_set_msi`.
 
 ## 6.3. PIC中断触发: kvm_set_pic_irq
+
+### 整体流程
+
+
+```cpp
+
+```
 
 对于PIC来说
 
 它主要是设置kvm里面的**虚拟中断控制器结构体**`struct kvm_pic`完成虚拟中断控制器的设置。如果是**边缘触发**，需要触发电平先1再0，完成一个正常的中断模拟。
 
 ## 6.4. IOAPIC中断触发: kvm_set_ioapic_irq
-
-对于IOAPIC来说
 
 ### 6.4.1. 整体流程
 
@@ -979,7 +981,7 @@ kvm_set_ioapic_irq()  // ioapic的中断触发入口
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
-整个流程是先检查IOAPIC状态，如果符合注入条件，则**组建中断结构体**，发送到**指定VCPU**的**LAPIC**，**设置LAPIC的寄存器**，完成虚拟中断控制器设置。
+对于IOAPIC来说, 整个流程是先检查IOAPIC状态，如果符合注入条件，则**组建中断结构体**，发送到**指定VCPU**的**LAPIC**，**设置LAPIC的寄存器**，完成虚拟中断控制器设置。
 
 ```cpp
 static int kvm_set_ioapic_irq(struct kvm_kernel_irq_routing_entry *e,
@@ -1253,7 +1255,26 @@ int kvm_apic_set_irq(struct kvm_vcpu *vcpu, struct kvm_lapic_irq *irq,
 
 具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`
 
-## 6.5. LAPIC接收中断
+
+## 6.5. MSI中断触发函数: kvm_set_msi
+
+### 6.5.1. 整体流程
+
+```
+
+```
+
+
+
+就是将irq消息解析，然后构造发送给VCPU的LAPIC，后面和IOAPIC的相同。
+
+```cpp
+kvm_set_msi() -> kvm_irq_delivery_to_apic() -> kvm_apic_set_irq() -> __apic_accept_irq()
+```
+
+这里要注意，CPU主循环和中断注入是两个并行的过程，所以CPU处于任何状态都能进行设置中断，设置中断以后，就会引起中断退出（最后一点是个人意见，可能不正确，应该是要写到vmcs位）。另外来自QEMU的中断注入也是调用这个循环，所以在QEMU中的中断和CPU循环也是并行执行。
+
+## 6.6. LAPIC接收中断
 
 然后来看下LAPIC如何接收中断，主要是在函数`__apic_accept_irq`中，这里就是将中断写入当前触发VCPU的`kvm_lapic`结构体中的相应位置。
 
@@ -1451,16 +1472,17 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
 
 
 
-## 6.6. MSI中断触发函数: kvm_set_msi
-
-就是将irq消息解析，然后构造发送给VCPU的LAPIC，后面和IOAPIC的相同。
-
-kvm_set_msi -> kvm_irq_delivery_to_apic -> kvm_apic_set_irq -> __apic_accept_irq
-
-这里要注意，CPU主循环和中断注入是两个并行的过程，所以CPU处于任何状态都能进行设置中断，设置中断以后，就会引起中断退出（最后一点是个人意见，可能不正确，应该是要写到vmcs位）。另外来自QEMU的中断注入也是调用这个循环，所以在QEMU中的中断和CPU循环也是并行执行。
 
 ## 6.7. 具体注入过程
 
+```cpp
+vcpu_enter_guest() // 物理CPU进入guest模式
+ ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
+ |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi
+ ├─ kvm_x86_ops.run(vcpu) // 真正进入虚拟机模式
+
+
+```
 
 
 在`vcpu_enter_guest` (x86.c)函数中,有这么一段代码
