--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -28,7 +28,7 @@
   - [6.1. 整体流程](#61-整体流程)
   - [6.2. 入口函数: kvm_set_irq()](#62-入口函数-kvm_set_irq)
   - [6.3. PIC中断触发: kvm_set_pic_irq](#63-pic中断触发-kvm_set_pic_irq)
-    - [整体流程](#整体流程)
+    - [6.3.1. 整体流程](#631-整体流程)
   - [6.4. IOAPIC中断触发: kvm_set_ioapic_irq](#64-ioapic中断触发-kvm_set_ioapic_irq)
     - [6.4.1. 整体流程](#641-整体流程)
   - [6.5. MSI中断触发函数: kvm_set_msi](#65-msi中断触发函数-kvm_set_msi)
@@ -945,11 +945,41 @@ int kvm_irq_map_gsi(struct kvm *kvm,
 
 ## 6.3. PIC中断触发: kvm_set_pic_irq
 
-### 整体流程
-
+### 6.3.1. 整体流程
 
 ```cpp
+kvm_set_pic_irq()  // pic的中断触发入口
+ ├─ struct kvm_pic *pic = kvm->arch.vpic; // 获取虚拟机的pic    
+ └─ kvm_pic_set_irq()     
 
+
+
+
+ |   ├─ irq_level = __kvm_irq_line_state(); // 获取电平
+ |   └─ ioapic_set_irq()   // 
+ |   |   ├─ u32 mask = 1 << irq;   // irq对应的位 
+ |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
+ |   |   ├─ edge = (entry.fields.trig_mode == IOAPIC_EDGE_TRIG); // 判断触发方式, 是否边沿触发
+ |   |   ├─ ioapic->irr &= ~mask; // 低电平时, 表明边沿触发第二次触发, 清理irr中相应的irq位, 直接返回, 说明模拟情况下电平触发只在高电平触发
+ |   |   ├─ old_irr = ioapic->irr; // 保存原有irr寄存器
+ |   |   ├─ ioapic->irr |= mask; // irr寄存器相应位置位
+ |   |   └─ ioapic_service();   // 将s赋值给kvm->arch.vpic
+ |   |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
+ |   |   |   ├─ irqe.XXX = XXX  // 构建中断消息, 对应kvm_lapic_irq
+ |   |   |   ├─ kvm_irq_delivery_to_apic(); // 将中断消息投递到lapic
+ |   |   |   |   ├─    // 
+ |   |   |   |   └─ kvm_apic_set_irq();   // 
+ |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
+```
+
+```cpp
+static int kvm_set_pic_irq(struct kvm_kernel_irq_routing_entry *e,
+                           struct kvm *kvm, int irq_source_id, int level,
+                           bool line_status)
+{
+        struct kvm_pic *pic = kvm->arch.vpic;
+        return kvm_pic_set_irq(pic, e->irqchip.pin, irq_source_id, level);
+}
 ```
 
 对于PIC来说
@@ -975,7 +1005,7 @@ kvm_set_ioapic_irq()  // ioapic的中断触发入口
  |   |   └─ ioapic_service();   // 将s赋值给kvm->arch.vpic
  |   |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
  |   |   |   ├─ irqe.XXX = XXX  // 构建中断消息, 对应kvm_lapic_irq
- |   |   |   └─ kvm_irq_delivery_to_apic(); // 将中断消息投递到lapic
+ |   |   |   ├─ kvm_irq_delivery_to_apic(); // 将中断消息投递到lapic
  |   |   |   |   ├─    // 
  |   |   |   |   └─ kvm_apic_set_irq();   // 
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
@@ -1260,10 +1290,50 @@ int kvm_apic_set_irq(struct kvm_vcpu *vcpu, struct kvm_lapic_irq *irq,
 
 ### 6.5.1. 整体流程
 
+```cpp
+kvm_set_msi()  // msi的中断触发入口
+ ├─ struct kvm_lapic_irq irq;; // 
+ ├─ kvm_set_msi_irq(kvm, e, &irq); 
+ └─ kvm_irq_delivery_to_apic(kvm, NULL, &irq, NULL);
+
+
+
+
+ |   ├─ irq_level = __kvm_irq_line_state(); // 获取电平
+ |   └─ ioapic_set_irq()   // 
+ |   |   ├─ u32 mask = 1 << irq;   // irq对应的位 
+ |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
+ |   |   ├─ edge = (entry.fields.trig_mode == IOAPIC_EDGE_TRIG); // 判断触发方式, 是否边沿触发
+ |   |   ├─ ioapic->irr &= ~mask; // 低电平时, 表明边沿触发第二次触发, 清理irr中相应的irq位, 直接返回, 说明模拟情况下电平触发只在高电平触发
+ |   |   ├─ old_irr = ioapic->irr; // 保存原有irr寄存器
+ |   |   ├─ ioapic->irr |= mask; // irr寄存器相应位置位
+ |   |   └─ ioapic_service();   // 将s赋值给kvm->arch.vpic
+ |   |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
+ |   |   |   ├─ irqe.XXX = XXX  // 构建中断消息, 对应kvm_lapic_irq
+ |   |   |   ├─ kvm_irq_delivery_to_apic(); // 将中断消息投递到lapic
+ |   |   |   |   ├─    // 
+ |   |   |   |   └─ kvm_apic_set_irq();   // 
+ |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
-```
 
+```cpp
+int kvm_set_msi(struct kvm_kernel_irq_routing_entry *e,
+                struct kvm *kvm, int irq_source_id, int level, bool line_status)
+{
+        struct kvm_lapic_irq irq;
+
+        if (kvm_msi_route_invalid(kvm, e))
+                return -EINVAL;
+
+        if (!level)
+                return -1;
+
+        kvm_set_msi_irq(kvm, e, &irq);
+
+        return kvm_irq_delivery_to_apic(kvm, NULL, &irq, NULL);
+}
+```
 
 
 就是将irq消息解析，然后构造发送给VCPU的LAPIC，后面和IOAPIC的相同。
