--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -24,7 +24,7 @@
       - [5.2.4.2. 三种设备在虚拟bus上的结构](#5242-三种设备在虚拟bus上的结构)
     - [5.2.5. kvm_ioapic_init(): ioapic的初始化](#525-kvm_ioapic_init-ioapic的初始化)
     - [5.2.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#526-kvm_setup_default_irq_routing-默认中断路由表的初始化)
-- [6. 中断注入](#6-中断注入)
+- [6. 中断注入的触发](#6-中断注入的触发)
   - [6.1. 整体流程](#61-整体流程)
   - [6.2. 入口函数: kvm_set_irq()](#62-入口函数-kvm_set_irq)
   - [6.3. PIC中断触发: kvm_set_pic_irq](#63-pic中断触发-kvm_set_pic_irq)
@@ -34,9 +34,9 @@
   - [6.5. MSI中断触发函数: kvm_set_msi](#65-msi中断触发函数-kvm_set_msi)
     - [6.5.1. 整体流程](#651-整体流程)
   - [6.6. LAPIC接收中断](#66-lapic接收中断)
-  - [6.7. 具体注入过程](#67-具体注入过程)
-- [7. 中断注入的触发](#7-中断注入的触发)
-- [8. 参考](#8-参考)
+- [7. 中断具体注入过程](#7-中断具体注入过程)
+- [8. 中断注入触发的源](#8-中断注入触发的源)
+- [9. 参考](#9-参考)
 
 <!-- /code_chunk_output -->
 
@@ -736,127 +736,18 @@ int kvm_set_routing_entry(struct kvm *kvm,
 
 
 
-# 6. 中断注入
+# 6. 中断注入的触发
 
-当我们设置好**虚拟中断控制器**以后，接着在`KVM_RUN`退出以后，就开始遍历这些虚拟中断控制器，如果发现中断，就将中断写入中断信息位(中断注入).
-
-中断注入实际是向**客户机CPU**注入一个事件，这个事件包括**异常**, **外部中断**和**NMI**。异常我们一般看作为同步，**中断被认为异步**。
-
-硬件具体实现就是设置**VMCS**中字段`VM-Entry interruption-infomation`中断信息位字段。
-
-中断注入实际在**VM运行前完成**的, 当中断完成后通过**读取中断的返回信息**来分析中断是否正确。
+中断注入在KVM内部流程起始于一个函数`kvm_set_irq`
 
 ## 6.1. 整体流程
 
 ```cpp
-kvm_set_irq()  // 中断注入入口
+kvm_set_irq()  // 中断触发入口
  ├─ kvm_irq_map_gsi()  // 获取同一个irq注册的所有中断路由项
  ├─ while() {  // 遍历中断路由项
  ├─ irq_set[i].set()  // 调用对应路由实体的触发函数 
  └─ } // 遍历得到的中断路由项
-```
-
-```cpp
-static int inject_pending_event(struct kvm_vcpu *vcpu)
-{
-        int r;
-
-        /* try to reinject previous events if any */
-
-        if (vcpu->arch.exception.injected)
-                kvm_x86_ops.queue_exception(vcpu);
-        /*
-         * Do not inject an NMI or interrupt if there is a pending
-         * exception.  Exceptions and interrupts are recognized at
-         * instruction boundaries, i.e. the start of an instruction.
-         * Trap-like exceptions, e.g. #DB, have higher priority than
-         * NMIs and interrupts, i.e. traps are recognized before an
-         * NMI/interrupt that's pending on the same instruction.
-         * Fault-like exceptions, e.g. #GP and #PF, are the lowest
-         * priority, but are only generated (pended) during instruction
-         * execution, i.e. a pending fault-like exception means the
-         * fault occurred on the *previous* instruction and must be
-         * serviced prior to recognizing any new events in order to
-         * fully complete the previous instruction.
-         */
-        else if (!vcpu->arch.exception.pending) {
-                if (vcpu->arch.nmi_injected)
-                        kvm_x86_ops.set_nmi(vcpu);
-                else if (vcpu->arch.interrupt.injected)
-                        kvm_x86_ops.set_irq(vcpu);
-        }
-
-        WARN_ON_ONCE(vcpu->arch.exception.injected &&
-                     vcpu->arch.exception.pending);
-
-        /*
-         * Call check_nested_events() even if we reinjected a previous event
-         * in order for caller to determine if it should require immediate-exit
-         * from L2 to L1 due to pending L1 events which require exit
-         * from L2 to L1.
-         */
-        if (is_guest_mode(vcpu)) {
-                r = kvm_x86_ops.nested_ops->check_events(vcpu);
-                if (r != 0)
-                        return r;
-        }
-
-        /* try to inject new event if pending */
-        if (vcpu->arch.exception.pending) {
-                trace_kvm_inj_exception(vcpu->arch.exception.nr,
-                                        vcpu->arch.exception.has_error_code,
-                                        vcpu->arch.exception.error_code);
-
-                vcpu->arch.exception.pending = false;
-                vcpu->arch.exception.injected = true;
-
-                if (exception_type(vcpu->arch.exception.nr) == EXCPT_FAULT)
-                        __kvm_set_rflags(vcpu, kvm_get_rflags(vcpu) |
-                                             X86_EFLAGS_RF);
-
-                if (vcpu->arch.exception.nr == DB_VECTOR) {
-                        /*
-                         * This code assumes that nSVM doesn't use
-                         * check_nested_events(). If it does, the
-                         * DR6/DR7 changes should happen before L1
-                         * gets a #VMEXIT for an intercepted #DB in
-                         * L2.  (Under VMX, on the other hand, the
-                         * DR6/DR7 changes should not happen in the
-                         * event of a VM-exit to L1 for an intercepted
-                         * #DB in L2.)
-                         */
-                        kvm_deliver_exception_payload(vcpu);
-                        if (vcpu->arch.dr7 & DR7_GD) {
-                                vcpu->arch.dr7 &= ~DR7_GD;
-                                kvm_update_dr7(vcpu);
-                        }
-                }
-
-                kvm_x86_ops.queue_exception(vcpu);
-        }
-
-        /* Don't consider new event if we re-injected an event */
-        if (kvm_event_needs_reinjection(vcpu))
-                return 0;
-
-        if (vcpu->arch.smi_pending &&
-            kvm_x86_ops.smi_allowed(vcpu, true)) {
-                vcpu->arch.smi_pending = false;
-                ++vcpu->arch.smi_count;
-                enter_smm(vcpu);
-        } else if (vcpu->arch.nmi_pending &&
-                   kvm_x86_ops.nmi_allowed(vcpu, true)) {
-                --vcpu->arch.nmi_pending;
-                vcpu->arch.nmi_injected = true;
-                kvm_x86_ops.set_nmi(vcpu);
-        } else if (kvm_cpu_has_injectable_intr(vcpu) &&
-                   kvm_x86_ops.interrupt_allowed(vcpu, true)) {
-                kvm_queue_interrupt(vcpu, kvm_cpu_get_interrupt(vcpu), false);
-                kvm_x86_ops.set_irq(vcpu);
-        }
-
-        return 0;
-}
 ```
 
 ## 6.2. 入口函数: kvm_set_irq()
@@ -1539,11 +1430,15 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
 }
 ```
 
+# 7. 中断具体注入过程
 
+当我们设置好**虚拟中断控制器**以后，接着在`KVM_RUN`退出以后，就开始遍历这些虚拟中断控制器，如果发现中断，就将中断写入中断信息位(中断注入).
 
+中断注入实际是向**客户机CPU**注入一个事件，这个事件包括**异常**, **外部中断**和**NMI**。异常我们一般看作为同步，**中断被认为异步**。
 
+硬件具体实现就是设置**VMCS**中字段`VM-Entry interruption-infomation`中断信息位字段。
 
-## 6.7. 具体注入过程
+中断注入实际在**VM运行前完成**的, 当中断完成后通过**读取中断的返回信息**来分析中断是否正确。
 
 ```cpp
 vcpu_enter_guest() // 物理CPU进入guest模式
@@ -1553,7 +1448,6 @@ vcpu_enter_guest() // 物理CPU进入guest模式
 
 
 ```
-
 
 在`vcpu_enter_guest` (x86.c)函数中,有这么一段代码
 
@@ -1609,7 +1503,7 @@ vcpu_enter_guest() // 物理CPU进入guest模式
 
 即在**进入非根模式之前**会检查`KVM_REQ_EVENT`事件，如果**存在pending的事件**，则调用`kvm_apic_accept_events`**接收**，这里主要是处理**APIC初始化期间**和**IPI中断**的，暂且不关注。
 
-之后会调用`inject_pending_event`，在这里会检查当前**是否有可注入的中断**，而具体检查过程时首先会通过`kvm_cpu_has_injectable_intr`函数，其中调用`kvm_apic_has_interrupt->apic_find_highest_irr->vmx_sync_pir_to_irr, vmx_sync_pir_to_irr`函数**对中断进行收集**，就是检查`vmx->pi_desc`中的**位图**，如果有，则会调用`kvm_apic_update_irr`把信息**更新到apic寄存器**里。然后调用`apic_search_irr`获取**IRR寄存器中的中断**，没找到的话会返回-1. 找到后调用`kvm_queue_interrupt`，**把中断记录到vcpu**中。
+之后会调用`inject_pending_event`
 
 ```cpp
 static int inject_pending_event(struct kvm_vcpu *vcpu)
@@ -1728,6 +1622,8 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
 }
 ```
 
+在这里会检查当前**是否有可注入的中断**，而具体检查过程时首先会通过`kvm_cpu_has_injectable_intr`函数，其中调用`kvm_apic_has_interrupt->apic_find_highest_irr->vmx_sync_pir_to_irr, vmx_sync_pir_to_irr`函数**对中断进行收集**，就是检查`vmx->pi_desc`中的**位图**，如果有，则会调用`kvm_apic_update_irr`把信息**更新到apic寄存器**里。然后调用`apic_search_irr`获取**IRR寄存器中的中断**，没找到的话会返回-1. 找到后调用`kvm_queue_interrupt`，**把中断记录到vcpu**中。
+
 ```cpp
 static inline void kvm_queue_interrupt(struct kvm_vcpu *vcpu, u8 vector,
     bool soft)
@@ -1800,19 +1696,19 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 
 这样KVM就完成了虚拟中断的注入，从中断源触发到写入虚拟中断控制器，再到VMCS的过程。
 
-# 7. 中断注入的触发
+# 8. 中断注入触发的源
 
 最后再回过头来讲讲是什么时候触发这个`kvm_set_irq`的。当然**中断需要模拟的时候**就调用。这里调用分为两种。
 
-1. 可以直接在KVM中调用这个函数，如虚拟I8254，我在其他文章中分析过i8254的中断模拟过程，这里有这种类型设备的中断源的模拟，顺被贴一张，一般中断源的逻辑流程图：
+1. 可以**直接在KVM中调用这个函数**，如虚拟I8254，我在其他文章中分析过i8254的中断模拟过程，这里有这种类型设备的中断源的模拟，顺被贴一张，一般中断源的逻辑流程图：
 
 ![2020-05-12-09-12-30.png](./images/2020-05-12-09-12-30.png)
 
-2. 可以从QEMU中通过调用QEMU中的函数中断注入函数kvm_set_irq.
+2. 可以从QEMU中通过调用QEMU中的函数中断注入函数`kvm_set_irq`.
 
-在QEMU中，如果有中断触发，会触发到相应中断控制器，中断方式也有8259(hw/i8259.c), IOAPIC(hw/ipf.c x86下没用这个，pic和apic相同处理，将pic扩展到24个), MSI(hw/msix.c)，在这里中断控制器里面都会触发这个QEMU的kvm_set_irq函数。
+在QEMU中，如果有中断触发，会触发到相应中断控制器，中断方式也有8259(hw/i8259.c), IOAPIC(hw/ipf.c x86下没用这个，pic和apic相同处理，将pic扩展到24个), MSI(hw/msix.c)，在这里中断控制器里面都会触发这个QEMU的`kvm_set_irq`函数。
 
-至于这个kvm_set_irq函数位置在qemu-kvm.c,在这个函数中进而调用kvm_set_irq_level,最后通过一个KVM_IRQ_LINE的IOCTL调用KVM模块里面的kvm_set_irq函数。
+至于这个`kvm_set_irq`函数位置在`qemu-kvm.c`,在这个函数中进而调用`kvm_set_irq_level`,最后通过一个`KVM_IRQ_LINE`的IOCTL调用KVM模块里面的`kvm_set_irq`函数。
 
 ```cpp
 int kvm_set_irq_level(kvm_context_t kvm, int irq, int level, int *status)
@@ -1828,7 +1724,7 @@ int kvm_set_irq_level(kvm_context_t kvm, int irq, int level, int *status)
 
 这里我就不分析QEMU中的中断源了，毕竟主要讲的是KVM
 
-# 8. 参考
+# 9. 参考
 
 https://www.cnblogs.com/ck1020/p/7424922.html
 
