--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -35,6 +35,7 @@
     - [6.5.1. 整体流程](#651-整体流程)
   - [6.6. LAPIC接收中断](#66-lapic接收中断)
 - [7. 中断具体注入过程](#7-中断具体注入过程)
+  - [7.1. 整体流程](#71-整体流程)
 - [8. 中断注入触发的源](#8-中断注入触发的源)
 - [9. 参考](#9-参考)
 
@@ -256,7 +257,9 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |       ├─ setup_routing_entry(kvm, new, e, ue) // 设置路由项
  |   |       |    ├─ kvm_set_routing_entry(kvm, e, ue);;   // 设置路由项的set方法
  |   |       |    └─ hlist_add_head(&e->link, &rt->map[e->gsi]);   // 设置gsi对应的哈希链表
- |   |       └─ rcu_assign_pointer(kvm->irq_routing, new);   // 设置虚拟机中断路由表
+ |   |       ├─ rcu_assign_pointer(kvm->irq_routing, new);   // 设置虚拟机中断路由表
+ |   |       ├─ kvm_irq_routing_update(kvm);   // 
+ |   |       └─ kvm_arch_irq_routing_update(kvm);   // 
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 ```
 
@@ -663,7 +666,7 @@ static int setup_routing_entry(struct kvm *kvm,
 
 3. 然后设置**irqchip的类型**和**管脚**，对于**IOAPIC**也是直接复制过来，PIC由于**管脚计算**是`irq%8`，所以这里需要**加上8的偏移**。之后**设置table的chip为gis号**。
 
-最后就把`kvm_kernel_irq_routing_entry`**以gsi号位索引**，加入到了**map数组**中对应的**哈希链表**中。
+4. 最后就把`kvm_kernel_irq_routing_entry`**以gsi号位索引**，加入到了**map数组**中对应的**哈希链表**中。
 
 ```cpp
 int kvm_set_routing_entry(struct kvm *kvm,
@@ -1440,6 +1443,8 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
 
 中断注入实际在**VM运行前完成**的, 当中断完成后通过**读取中断的返回信息**来分析中断是否正确。
 
+## 7.1. 整体流程
+
 ```cpp
 vcpu_enter_guest() // 物理CPU进入guest模式
  ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
@@ -1503,7 +1508,7 @@ vcpu_enter_guest() // 物理CPU进入guest模式
 
 即在**进入非根模式之前**会检查`KVM_REQ_EVENT`事件，如果**存在pending的事件**，则调用`kvm_apic_accept_events`**接收**，这里主要是处理**APIC初始化期间**和**IPI中断**的，暂且不关注。
 
-之后会调用`inject_pending_event`
+之后会调用`inject_pending_event()`
 
 ```cpp
 static int inject_pending_event(struct kvm_vcpu *vcpu)
