--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -3,41 +3,37 @@
 <!-- code_chunk_output -->
 
 - [1. 基本原理](#1-基本原理)
-- [2. Time Tick](#2-time-tick)
-  - [2.1. 物理环境下的timer](#21-物理环境下的timer)
-  - [2.2. 虚拟化下的timer](#22-虚拟化下的timer)
-  - [2.3. 相关物理芯片](#23-相关物理芯片)
-    - [2.3.1. PIC主要为8259A PIC芯片](#231-pic主要为8259a-pic芯片)
-    - [2.3.2. APIC](#232-apic)
-- [3. 相关代码](#3-相关代码)
-- [4. 整体流程](#4-整体流程)
-- [5. 初始化中断控制器](#5-初始化中断控制器)
-  - [5.1. LAPIC的创建](#51-lapic的创建)
-    - [5.1.1. 整体流程](#511-整体流程)
-    - [5.1.2. 代码入口](#512-代码入口)
-  - [5.2. PIC和IOAPIC的创建](#52-pic和ioapic的创建)
-    - [5.2.1. QEMU](#521-qemu)
-    - [5.2.2. 整体流程](#522-整体流程)
-    - [5.2.3. 入口代码](#523-入口代码)
-    - [5.2.4. kvm_pic_init(): 虚拟pic(8259A)的初始化](#524-kvm_pic_init-虚拟pic8259a的初始化)
-      - [5.2.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备](#5241-kvm_io_bus_register_dev-在相应的io_bus总线上注册设备)
-      - [5.2.4.2. 三种设备在虚拟bus上的结构](#5242-三种设备在虚拟bus上的结构)
-    - [5.2.5. kvm_ioapic_init(): ioapic的初始化](#525-kvm_ioapic_init-ioapic的初始化)
-    - [5.2.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#526-kvm_setup_default_irq_routing-默认中断路由表的初始化)
-- [6. 中断注入的触发](#6-中断注入的触发)
+- [2. 相关代码](#2-相关代码)
+- [3. 整体流程](#3-整体流程)
+- [4. 初始化中断控制器](#4-初始化中断控制器)
+  - [4.1. LAPIC的创建](#41-lapic的创建)
+    - [4.1.1. 整体流程](#411-整体流程)
+    - [4.1.2. 代码入口](#412-代码入口)
+  - [4.2. PIC和IOAPIC的创建](#42-pic和ioapic的创建)
+    - [4.2.1. QEMU](#421-qemu)
+    - [4.2.2. 整体流程](#422-整体流程)
+    - [4.2.3. 入口代码](#423-入口代码)
+    - [4.2.4. kvm_pic_init(): 虚拟pic(8259A)的初始化](#424-kvm_pic_init-虚拟pic8259a的初始化)
+      - [4.2.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备](#4241-kvm_io_bus_register_dev-在相应的io_bus总线上注册设备)
+      - [4.2.4.2. 三种设备在虚拟bus上的结构](#4242-三种设备在虚拟bus上的结构)
+    - [4.2.5. kvm_ioapic_init(): ioapic的初始化](#425-kvm_ioapic_init-ioapic的初始化)
+    - [4.2.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#426-kvm_setup_default_irq_routing-默认中断路由表的初始化)
+- [5. 中断注入的触发](#5-中断注入的触发)
+  - [5.1. 整体流程](#51-整体流程)
+  - [5.2. 入口函数: kvm_set_irq()](#52-入口函数-kvm_set_irq)
+  - [5.3. PIC中断触发](#53-pic中断触发)
+    - [5.3.1. 整体流程](#531-整体流程)
+    - [kvm_set_pic_irq(): pic的触发方法](#kvm_set_pic_irq-pic的触发方法)
+  - [5.4. IOAPIC中断触发](#54-ioapic中断触发)
+    - [5.4.1. 整体流程](#541-整体流程)
+    - [kvm_set_ioapic_irq(): ioapic的触发方法](#kvm_set_ioapic_irq-ioapic的触发方法)
+  - [5.5. MSI中断触发函数](#55-msi中断触发函数)
+    - [5.5.1. 整体流程](#551-整体流程)
+  - [5.6. LAPIC接收中断](#56-lapic接收中断)
+- [6. 中断具体注入过程](#6-中断具体注入过程)
   - [6.1. 整体流程](#61-整体流程)
-  - [6.2. 入口函数: kvm_set_irq()](#62-入口函数-kvm_set_irq)
-  - [6.3. PIC中断触发: kvm_set_pic_irq](#63-pic中断触发-kvm_set_pic_irq)
-    - [6.3.1. 整体流程](#631-整体流程)
-  - [6.4. IOAPIC中断触发: kvm_set_ioapic_irq](#64-ioapic中断触发-kvm_set_ioapic_irq)
-    - [6.4.1. 整体流程](#641-整体流程)
-  - [6.5. MSI中断触发函数: kvm_set_msi](#65-msi中断触发函数-kvm_set_msi)
-    - [6.5.1. 整体流程](#651-整体流程)
-  - [6.6. LAPIC接收中断](#66-lapic接收中断)
-- [7. 中断具体注入过程](#7-中断具体注入过程)
-  - [7.1. 整体流程](#71-整体流程)
-- [8. 中断注入触发的源](#8-中断注入触发的源)
-- [9. 参考](#9-参考)
+- [7. 中断注入触发的源](#7-中断注入触发的源)
+- [8. 参考](#8-参考)
 
 <!-- /code_chunk_output -->
 
@@ -51,61 +47,11 @@
 
 针对这些关键部件的虚拟化是中断虚拟化的重点。
 
-该文章以time tick的模拟为例, 
-
-# 2. Time Tick
-
-## 2.1. 物理环境下的timer
-
-一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。
-
-普通情况下，**OS Time Tick**由**PIT**(i8254)或**APIC Timer**设备提供产生中断源
-
-- PIT(i8254)定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
-- **APIC Timer**产生一个**local tick**。
-
-两者电子线路连接不同:
-- 对于**i8254设备**来说首先连接到**i8259中断控制器**，i8259中断控制器再连接到**ioapic设备**中，送到**lapic**, 最后**注入到vcpu**中。
-- 对于APIC Timer设备实际就是lapic的一个功能，意思就是通过编程可以触发lapic设备周期产生中断，然后注入到vcpu。
-
-通过上面了解知道两者区别了**APIC Timer**的是**每个cpu**内核都有**一个定时器**，而**PIT是共用的一个**。
-
-APIC Timer的模式APIC定时器包含**3种定时器模式**，
-- 周期触发`periodic`
-- 一次性触发`one-shot`
-- `TSC-Deadline`模式(最新的CPU里面支持)。
-
-## 2.2. 虚拟化下的timer
-
-在虚拟化情况下，必须为**guest OS**模拟一个**PIT**和**APIC Timer**。
-
-模拟的**PIT**和**APIC Timer**不能像真正硬件那样**物理计时**，所以一般用**HOST的某种系统服务**或**软件计时器**来为这个模拟 PIT 提供模拟”**时钟源**”。
-
-目前两种方案：1. **用户态模拟方案**（QEMU）； 2. **内核态模拟方案**（KVM）；
-
-在**QEMU**中，用**SIGALARM信号**来实现：QEMU利用**某种机制**，使**timer interrupt handler**会向**QEMU process**发送一个**SIGALARM信号**，处理该信号过程中再**模拟PIT**中**产生一次时钟**。QEMU再通过某种机制，将**此模拟PIT**发出的**模拟中断交付给kvm**，再由kvm**注入**到虚拟机中去。
-
-目前的kvm版本支持**内核PIT**、**APIC**和**内核PIC**，因为这两个设备是**频繁使用**的，在**内核模式中模拟**比在**用户模式模拟**性能更高。
-
-kvm支持的时钟有8254,local apic timer,kvmclock等
-
-这里重点是讲内核PIT的模拟实现，弄清楚它是如何为guest OS提供时钟的。
-
-## 2.3. 相关物理芯片
-
-### 2.3.1. PIC主要为8259A PIC芯片
-
-参见`Architecture/x86/4. x86中断与异常.md`
-
-### 2.3.2. APIC
-
-见硬件基础
-
-# 3. 相关代码
+# 2. 相关代码
 
 ![2020-05-04-13-06-31.png](./images/2020-05-04-13-06-31.png)
 
-# 4. 整体流程
+# 3. 整体流程
 
 整个主要流程:
 
@@ -113,7 +59,7 @@ kvm支持的时钟有8254,local apic timer,kvmclock等
 
 修正: 重定向表中有目标lapic的id
 
-# 5. 初始化中断控制器
+# 4. 初始化中断控制器
 
 考虑到中断实时性对性能的影响，**PIC和IOAPIC**的**设备模拟主要逻辑！！！** 都放到了**kvm模块**进行实现，**每个VCPU**的**LAPIC**则**完全！！！放到kvm**中进行实现。 
 
@@ -126,13 +72,13 @@ kvm支持的时钟有8254,local apic timer,kvmclock等
 
 所以在**qemu**中也会创建**i8259A**和**ioapic**
 
-## 5.1. LAPIC的创建
+## 4.1. LAPIC的创建
 
 由于**APIC Timer设备**实际就是**lapic的一个功能**，所以在创建lapic设备同时，也就辅助设置了。
 
 不存在qemu侧流程
 
-### 5.1.1. 整体流程
+### 4.1.1. 整体流程
 
 ```cpp
 kvm_arch_vcpu_create()  // vcpu创建中创建lapic
@@ -148,7 +94,7 @@ kvm_arch_vcpu_create()  // vcpu创建中创建lapic
  |   ├─ kvm_lapic_reset(vcpu, init_event); // 设置寄存器的值为默认值
 ```
 
-### 5.1.2. 代码入口
+### 4.1.2. 代码入口
 
 lapic是每个vcpu一个, 所以在创建vcpu流程中创建了lapic
 
@@ -212,9 +158,9 @@ nomem:
 
 
 
-## 5.2. PIC和IOAPIC的创建
+## 4.2. PIC和IOAPIC的创建
 
-### 5.2.1. QEMU
+### 4.2.1. QEMU
 
 qemu代码中中断控制器的kvm内核初始化流程为：
 
@@ -232,7 +178,7 @@ kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
 
 qemu通过kvm的ioctl命令`KVM_CREATE_IRQCHIP`调用到kvm内核模块中，在**内核模块**中**创建和初始化PIC/IOAPIC设备**（创建设备对应的数据结构并将设备注册到总线上）。
 
-### 5.2.2. 整体流程
+### 4.2.2. 整体流程
 
 ```cpp
 kvm_vm_ioctl()  // vm ioctl的入口
@@ -263,7 +209,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 ```
 
-### 5.2.3. 入口代码
+### 4.2.3. 入口代码
 
 ```cpp
         case KVM_CREATE_IRQCHIP: {
@@ -304,7 +250,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
         }
 ```
 
-### 5.2.4. kvm_pic_init(): 虚拟pic(8259A)的初始化
+### 4.2.4. kvm_pic_init(): 虚拟pic(8259A)的初始化
 
 `arch/x86/kvm/i8259.c`
 
@@ -369,7 +315,7 @@ fail_unlock:
 }
 ```
 
-#### 5.2.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备
+#### 4.2.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备
 
 8259A PIC属于PIO访问类型.
 
@@ -417,7 +363,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
 }
 ```
 
-#### 5.2.4.2. 三种设备在虚拟bus上的结构
+#### 4.2.4.2. 三种设备在虚拟bus上的结构
 
 虚拟bus总线结构如下, 注意IO端口地址与设备读写函数的关联
 
@@ -425,7 +371,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
 
 每个`kvm_io_device`的设备都有对应的读写函数
 
-### 5.2.5. kvm_ioapic_init(): ioapic的初始化
+### 4.2.5. kvm_ioapic_init(): ioapic的初始化
 
 ```cpp
 int kvm_ioapic_init(struct kvm *kvm)
@@ -462,7 +408,7 @@ int kvm_ioapic_init(struct kvm *kvm)
 
 ![2020-05-04-17-58-37.png](./images/2020-05-04-17-58-37.png)
 
-### 5.2.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化
+### 4.2.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化
 
 **中断路由表的初始化**通过`kvm_setup_default_irq_routing`函数实现，
 
@@ -739,11 +685,11 @@ int kvm_set_routing_entry(struct kvm *kvm,
 
 
 
-# 6. 中断注入的触发
+# 5. 中断注入的触发
 
 中断注入在KVM内部流程起始于一个函数`kvm_set_irq`
 
-## 6.1. 整体流程
+## 5.1. 整体流程
 
 ```cpp
 kvm_set_irq()  // 中断触发入口
@@ -753,7 +699,7 @@ kvm_set_irq()  // 中断触发入口
  └─ } // 遍历得到的中断路由项
 ```
 
-## 6.2. 入口函数: kvm_set_irq()
+## 5.2. 入口函数: kvm_set_irq()
 
 中断注入在KVM内部流程起始于一个函数`kvm_set_irq`
 
@@ -837,9 +783,9 @@ int kvm_irq_map_gsi(struct kvm *kvm,
 - 目前大都是**APIC架构**，因此set方法基本都是`kvm_set_ioapic_irq`
 - **MSI中断**消息系统的中断触发函数`kvm_set_msi`.
 
-## 6.3. PIC中断触发: kvm_set_pic_irq
+## 5.3. PIC中断触发
 
-### 6.3.1. 整体流程
+### 5.3.1. 整体流程
 
 ```cpp
 kvm_set_pic_irq()  // pic的中断触发入口
@@ -866,6 +812,8 @@ kvm_set_pic_irq()  // pic的中断触发入口
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
+### kvm_set_pic_irq(): pic的触发方法
+
 ```cpp
 static int kvm_set_pic_irq(struct kvm_kernel_irq_routing_entry *e,
                            struct kvm *kvm, int irq_source_id, int level,
@@ -880,9 +828,9 @@ static int kvm_set_pic_irq(struct kvm_kernel_irq_routing_entry *e,
 
 它主要是设置kvm里面的**虚拟中断控制器结构体**`struct kvm_pic`完成虚拟中断控制器的设置。如果是**边缘触发**，需要触发电平先1再0，完成一个正常的中断模拟。
 
-## 6.4. IOAPIC中断触发: kvm_set_ioapic_irq
+## 5.4. IOAPIC中断触发
 
-### 6.4.1. 整体流程
+### 5.4.1. 整体流程
 
 ```cpp
 kvm_set_ioapic_irq()  // ioapic的中断触发入口
@@ -905,7 +853,9 @@ kvm_set_ioapic_irq()  // ioapic的中断触发入口
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
-对于IOAPIC来说, 整个流程是先检查IOAPIC状态，如果符合注入条件，则**组建中断结构体**，发送到**指定VCPU**的**LAPIC**，**设置LAPIC的寄存器**，完成虚拟中断控制器设置。
+对于IOAPIC来说, 整个流程是先检查IOAPIC状态，如果符合注入条件，则**组建中断结构体**，发送到**指定VCPU**的**LAPIC**，**设置LAPIC的寄存器**，完成**虚拟中断控制器设置**。
+
+### kvm_set_ioapic_irq(): ioapic的触发方法
 
 ```cpp
 static int kvm_set_ioapic_irq(struct kvm_kernel_irq_routing_entry *e,
@@ -1180,9 +1130,9 @@ int kvm_apic_set_irq(struct kvm_vcpu *vcpu, struct kvm_lapic_irq *irq,
 具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`
 
 
-## 6.5. MSI中断触发函数: kvm_set_msi
+## 5.5. MSI中断触发函数
 
-### 6.5.1. 整体流程
+### 5.5.1. 整体流程
 
 ```cpp
 kvm_set_msi()  // msi的中断触发入口
@@ -1209,6 +1159,7 @@ kvm_set_msi()  // msi的中断触发入口
  |   |   |   |   └─ kvm_apic_set_irq();   // 
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
+
 
 
 ```cpp
@@ -1238,7 +1189,7 @@ kvm_set_msi() -> kvm_irq_delivery_to_apic() -> kvm_apic_set_irq() -> __apic_acce
 
 这里要注意，CPU主循环和中断注入是两个并行的过程，所以CPU处于任何状态都能进行设置中断，设置中断以后，就会引起中断退出（最后一点是个人意见，可能不正确，应该是要写到vmcs位）。另外来自QEMU的中断注入也是调用这个循环，所以在QEMU中的中断和CPU循环也是并行执行。
 
-## 6.6. LAPIC接收中断
+## 5.6. LAPIC接收中断
 
 然后来看下LAPIC如何接收中断，主要是在函数`__apic_accept_irq`中，这里就是将中断写入当前触发VCPU的`kvm_lapic`结构体中的相应位置。
 
@@ -1433,7 +1384,7 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
 }
 ```
 
-# 7. 中断具体注入过程
+# 6. 中断具体注入过程
 
 当我们设置好**虚拟中断控制器**以后，接着在`KVM_RUN`退出以后，就开始遍历这些虚拟中断控制器，如果发现中断，就将中断写入中断信息位(中断注入).
 
@@ -1443,7 +1394,7 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
 
 中断注入实际在**VM运行前完成**的, 当中断完成后通过**读取中断的返回信息**来分析中断是否正确。
 
-## 7.1. 整体流程
+## 6.1. 整体流程
 
 ```cpp
 vcpu_enter_guest() // 物理CPU进入guest模式
@@ -1703,7 +1654,7 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 
 这样KVM就完成了虚拟中断的注入，从中断源触发到写入虚拟中断控制器，再到VMCS的过程。
 
-# 8. 中断注入触发的源
+# 7. 中断注入触发的源
 
 最后再回过头来讲讲是什么时候触发这个`kvm_set_irq`的。当然**中断需要模拟的时候**就调用。这里调用分为两种。
 
@@ -1731,7 +1682,7 @@ int kvm_set_irq_level(kvm_context_t kvm, int irq, int level, int *status)
 
 这里我就不分析QEMU中的中断源了，毕竟主要讲的是KVM
 
-# 9. 参考
+# 8. 参考
 
 https://www.cnblogs.com/ck1020/p/7424922.html
 
