--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -27,8 +27,10 @@
   - [5.4. IOAPIC中断触发](#54-ioapic中断触发)
     - [5.4.1. 整体流程](#541-整体流程)
     - [kvm_set_ioapic_irq(): ioapic的触发方法](#kvm_set_ioapic_irq-ioapic的触发方法)
+      - [ioapic_service(): 根据RTE构建中断消息发往lapic](#ioapic_service-根据rte构建中断消息发往lapic)
   - [5.5. MSI中断触发函数](#55-msi中断触发函数)
     - [5.5.1. 整体流程](#551-整体流程)
+    - [kvm_set_msi(): msi的触发方法](#kvm_set_msi-msi的触发方法)
   - [5.6. LAPIC接收中断](#56-lapic接收中断)
 - [6. 中断具体注入过程](#6-中断具体注入过程)
   - [6.1. 整体流程](#61-整体流程)
@@ -876,9 +878,10 @@ int kvm_ioapic_set_irq(struct kvm_ioapic *ioapic, int irq, int irq_source_id,
         BUG_ON(irq < 0 || irq >= IOAPIC_NUM_PINS);
 
         spin_lock(&ioapic->lock);
-        /*判断请求高电平还是低电平*/
+        /*得到请求电平*/
         irq_level = __kvm_irq_line_state(&ioapic->irq_states[irq],
                                          irq_source_id, level);
+        // ioapic中断触发
         ret = ioapic_set_irq(ioapic, irq, irq_level, line_status);
 
         spin_unlock(&ioapic->lock);
@@ -967,7 +970,9 @@ out:
 
 之前我们说过，**边沿触发**需要**两个水平触发**来**模拟**，**前后电平相反**。这里就要先做判断是对应哪一次。**只有首次触发**才会进行后续的操作，而**二次触发**相当于**reset操作**，就是把**ioapic的irr寄存器清除**。
 
-边沿触发且旧irr与新的不等, 或者, 电平触发，就会对其进行更新，进入`ioapic_service`函数。
+#### ioapic_service(): 根据RTE构建中断消息发往lapic
+
+**边沿触发**且**旧irr**与**新的不等**, 或者, **电平触发**，就会对其进行更新，进入`ioapic_service`函数。
 
 ```cpp
 // arch/x86/kvm/ioapic.h
@@ -980,7 +985,7 @@ out:
 // arch/x86/kvm/ioapic.c
 static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
 {
-        // 根据irq获取重定向表的相应项
+        // 根据irq获取重定向表的相应项RTE
         union kvm_ioapic_redirect_entry *entry = &ioapic->redirtbl[irq];
         // 下面根据entry构建lapic的irq
         struct kvm_lapic_irq irqe;
@@ -1160,7 +1165,7 @@ kvm_set_msi()  // msi的中断触发入口
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
-
+### kvm_set_msi(): msi的触发方法
 
 ```cpp
 int kvm_set_msi(struct kvm_kernel_irq_routing_entry *e,
