--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -20,20 +20,22 @@
     - [4.2.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#426-kvm_setup_default_irq_routing-默认中断路由表的初始化)
 - [5. 中断注入的触发](#5-中断注入的触发)
   - [5.1. 整体流程](#51-整体流程)
-  - [5.2. 入口函数: kvm_set_irq()](#52-入口函数-kvm_set_irq)
+  - [5.2. kvm_set_irq(): 中断触发](#52-kvm_set_irq-中断触发)
   - [5.3. PIC中断触发](#53-pic中断触发)
     - [5.3.1. 整体流程](#531-整体流程)
-    - [kvm_set_pic_irq(): pic的触发方法](#kvm_set_pic_irq-pic的触发方法)
+    - [5.3.2. kvm_set_pic_irq(): pic的触发方法](#532-kvm_set_pic_irq-pic的触发方法)
   - [5.4. IOAPIC中断触发](#54-ioapic中断触发)
     - [5.4.1. 整体流程](#541-整体流程)
-    - [kvm_set_ioapic_irq(): ioapic的触发方法](#kvm_set_ioapic_irq-ioapic的触发方法)
-      - [ioapic_service(): 根据RTE构建中断消息发往lapic](#ioapic_service-根据rte构建中断消息发往lapic)
+    - [5.4.2. kvm_set_ioapic_irq(): ioapic的触发方法](#542-kvm_set_ioapic_irq-ioapic的触发方法)
+      - [5.4.2.1. ioapic_service(): 根据RTE构建中断消息发往lapic](#5421-ioapic_service-根据rte构建中断消息发往lapic)
+      - [5.4.2.2. kvm_irq_delivery_to_apic(): 投递消息到lapic](#5422-kvm_irq_delivery_to_apic-投递消息到lapic)
   - [5.5. MSI中断触发函数](#55-msi中断触发函数)
     - [5.5.1. 整体流程](#551-整体流程)
-    - [kvm_set_msi(): msi的触发方法](#kvm_set_msi-msi的触发方法)
-  - [5.6. LAPIC接收中断](#56-lapic接收中断)
+    - [5.5.2. kvm_set_msi(): msi的触发方法](#552-kvm_set_msi-msi的触发方法)
+  - [5.6. __apic_accept_irq(): LAPIC接收中断](#56-__apic_accept_irq-lapic接收中断)
 - [6. 中断具体注入过程](#6-中断具体注入过程)
   - [6.1. 整体流程](#61-整体流程)
+  - [](#)
 - [7. 中断注入触发的源](#7-中断注入触发的源)
 - [8. 参考](#8-参考)
 
@@ -701,7 +703,7 @@ kvm_set_irq()  // 中断触发入口
  └─ } // 遍历得到的中断路由项
 ```
 
-## 5.2. 入口函数: kvm_set_irq()
+## 5.2. kvm_set_irq(): 中断触发
 
 中断注入在KVM内部流程起始于一个函数`kvm_set_irq`
 
@@ -814,7 +816,7 @@ kvm_set_pic_irq()  // pic的中断触发入口
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
-### kvm_set_pic_irq(): pic的触发方法
+### 5.3.2. kvm_set_pic_irq(): pic的触发方法
 
 ```cpp
 static int kvm_set_pic_irq(struct kvm_kernel_irq_routing_entry *e,
@@ -857,7 +859,7 @@ kvm_set_ioapic_irq()  // ioapic的中断触发入口
 
 对于IOAPIC来说, 整个流程是先检查IOAPIC状态，如果符合注入条件，则**组建中断结构体**，发送到**指定VCPU**的**LAPIC**，**设置LAPIC的寄存器**，完成**虚拟中断控制器设置**。
 
-### kvm_set_ioapic_irq(): ioapic的触发方法
+### 5.4.2. kvm_set_ioapic_irq(): ioapic的触发方法
 
 ```cpp
 static int kvm_set_ioapic_irq(struct kvm_kernel_irq_routing_entry *e,
@@ -970,7 +972,7 @@ out:
 
 之前我们说过，**边沿触发**需要**两个水平触发**来**模拟**，**前后电平相反**。这里就要先做判断是对应哪一次。**只有首次触发**才会进行后续的操作，而**二次触发**相当于**reset操作**，就是把**ioapic的irr寄存器清除**。
 
-#### ioapic_service(): 根据RTE构建中断消息发往lapic
+#### 5.4.2.1. ioapic_service(): 根据RTE构建中断消息发往lapic
 
 **边沿触发**且**旧irr**与**新的不等**, 或者, **电平触发**，就会对其进行更新，进入`ioapic_service`函数。
 
@@ -1035,6 +1037,8 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
 ```
 
 该函数比较简单，就是**根据irq号**，获取**重定向表中的一项**，判断`kvm_ioapic_redirect_entry`**没有设置mask**，然后根据`kvm_ioapic_redirect_entry`，**构建**`kvm_lapic_irq`，这就类似于在**总线上的传递过程**。
+
+#### 5.4.2.2. kvm_irq_delivery_to_apic(): 投递消息到lapic
 
 之后调用`kvm_irq_delivery_to_apic`，该函数会**把消息传递给相应的VCPU** ，
 
@@ -1132,7 +1136,7 @@ int kvm_apic_set_irq(struct kvm_vcpu *vcpu, struct kvm_lapic_irq *irq,
 }
 ```
 
-具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`
+具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`, 让lapic接收中断
 
 
 ## 5.5. MSI中断触发函数
@@ -1165,7 +1169,7 @@ kvm_set_msi()  // msi的中断触发入口
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
-### kvm_set_msi(): msi的触发方法
+### 5.5.2. kvm_set_msi(): msi的触发方法
 
 ```cpp
 int kvm_set_msi(struct kvm_kernel_irq_routing_entry *e,
@@ -1194,7 +1198,7 @@ kvm_set_msi() -> kvm_irq_delivery_to_apic() -> kvm_apic_set_irq() -> __apic_acce
 
 这里要注意，CPU主循环和中断注入是两个并行的过程，所以CPU处于任何状态都能进行设置中断，设置中断以后，就会引起中断退出（最后一点是个人意见，可能不正确，应该是要写到vmcs位）。另外来自QEMU的中断注入也是调用这个循环，所以在QEMU中的中断和CPU循环也是并行执行。
 
-## 5.6. LAPIC接收中断
+## 5.6. __apic_accept_irq(): LAPIC接收中断
 
 然后来看下LAPIC如何接收中断，主要是在函数`__apic_accept_irq`中，这里就是将中断写入当前触发VCPU的`kvm_lapic`结构体中的相应位置。
 
@@ -1409,6 +1413,8 @@ vcpu_enter_guest() // 物理CPU进入guest模式
 
 
 ```
+
+## 
 
 在`vcpu_enter_guest` (x86.c)函数中,有这么一段代码
 
