--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -95,8 +95,6 @@ struct kvm_irq_routing_table {
 
 ## 2.2. kvm_kernel_irq_routing_entry: 中断路由项
 
-`kvm_kernel_irq_routing_entry`结构体**对应具体芯片的一个引脚**
-
 ```cpp
 /* gsi routing entry types */
 #define KVM_IRQ_ROUTING_IRQCHIP 1
@@ -139,7 +137,9 @@ struct kvm_kernel_irq_routing_entry {
 };
 ```
 
-GSI是该entry对应的**GSI号**，一般**和IRQ是一样**，
+`kvm_kernel_irq_routing_entry`结构体**对应具体芯片的一个引脚**, 也就是每个项对应**一个设备信息**.
+
+GSI是该entry对应的**GSI号**，一般**和IRQ是一样**，注意, 如果**irq共享**的话, **两个或多个中断路由项**的GSI可能是**一样的**, 即**两个或多个设备**使用**同一个irq号**.
 
 type表示**该gsi的类型**, 取值可以是` KVM_IRQ_ROUTING_IRQCHIP`, `KVM_IRQ_ROUTING_MSI`等
 
